Add method to get base62 encoding of a SpotifyId as used in URIs
Quick fix by using Mpz::to_str_radix instead of a custom
implementation based on the internal u128 number.

As the alphabet used by Mpz::to_str_radix is ordered differently
from what Spotify uses, we need to invert the case of the resulting
base62 string.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ rpassword = "*"
 getopts = "0.2.4"
 log = "0.3"
 env_logger = "0.3"
+changecase = "*"
 
 [dependencies.protobuf]
 git = "https://github.com/plietar/rust-protobuf.git"
